# code-tutor-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
codetutor/: cli.py  config.py  core.py
tests/: test_cli.py
